// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add and delete each item in the list A data was successfully added, and the length of the list was added by one, time changes. 1`] = `
<div
  data-testid="todolist"
>
  <h3>
    List
  </h3>
  <div
    data-testid="update-time"
  >
    Update Time: 
    2021/7/19下午11:14:19
  </div>
  <br />
  <div
    style="display: flex; justify-content: space-between;"
  >
    <input
      data-testid="input"
      placeholder="please input"
      type="text"
    />
    <button
      data-testid="Add"
      disabled=""
    >
      add
    </button>
  </div>
  <br />
  <div
    data-testid="list"
  >
    <div
      class="sc-iTVJFM iFwnAG"
      data-testid="list0"
    >
      <div
        style="flex: 2;"
      >
        drink
      </div>
      <div
        style="flex: 2;"
      >
        <span
          data-testid="complete0"
          style="color: green;"
        >
          Yes
        </span>
      </div>
      <div
        style="flex: 1;"
      >
        <span
          data-testid="delete0"
        >
          delete
        </span>
      </div>
    </div>
    <div
      class="sc-iBzEeX ddLjoH"
      data-testid="list1"
    >
      <div
        style="flex: 2;"
      >
        eat
      </div>
      <div
        style="flex: 2;"
      >
        <span
          data-testid="complete1"
          style="color: green;"
        >
          Yes
        </span>
      </div>
      <div
        style="flex: 1;"
      >
        <span
          data-testid="delete1"
        >
          delete
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Add and delete each item in the list Delete each time, the length of the list is reduced by one, time changes. 1`] = `
<div
  data-testid="todolist"
>
  <h3>
    List
  </h3>
  <div
    data-testid="update-time"
  >
    Update Time: 
    2021/7/19下午11:14:20
  </div>
  <br />
  <div
    style="display: flex; justify-content: space-between;"
  >
    <input
      data-testid="input"
      placeholder="please input"
      type="text"
    />
    <button
      data-testid="Add"
      disabled=""
    >
      add
    </button>
  </div>
  <br />
  <div
    data-testid="list"
  >
    <div
      class="sc-gSYDnn eWNiXN"
      data-testid="list0"
    >
      <div
        style="flex: 2;"
      >
        drink
      </div>
      <div
        style="flex: 2;"
      >
        <span
          data-testid="complete0"
          style="color: green;"
        >
          Yes
        </span>
      </div>
      <div
        style="flex: 1;"
      >
        <span
          data-testid="delete0"
        >
          delete
        </span>
      </div>
    </div>
    <div
      class="sc-laZMeE kmtwSQ"
      data-testid="list1"
    >
      <div
        style="flex: 2;"
      >
        eat
      </div>
      <div
        style="flex: 2;"
      >
        <span
          data-testid="complete1"
          style="color: green;"
        >
          Yes
        </span>
      </div>
      <div
        style="flex: 1;"
      >
        <span
          data-testid="delete1"
        >
          delete
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Click the status button Click the status button, text and style should be changed, time changes 1`] = `
<div
  data-testid="todolist"
>
  <h3>
    List
  </h3>
  <div
    data-testid="update-time"
  >
    Update Time: 
    2021/7/19下午11:14:18
  </div>
  <br />
  <div
    style="display: flex; justify-content: space-between;"
  >
    <input
      data-testid="input"
      placeholder="please input"
      type="text"
    />
    <button
      data-testid="Add"
      disabled=""
    >
      add
    </button>
  </div>
  <br />
  <div
    data-testid="list"
  >
    <div
      class="sc-iklJeh dBUFYd"
      data-testid="list0"
    >
      <div
        style="flex: 2;"
      >
        drink
      </div>
      <div
        style="flex: 2;"
      >
        <span
          data-testid="complete0"
          style="color: red;"
        >
          No
        </span>
      </div>
      <div
        style="flex: 1;"
      >
        <span
          data-testid="delete0"
        >
          delete
        </span>
      </div>
    </div>
    <div
      class="sc-jJMGnK hLytLB"
      data-testid="list1"
    >
      <div
        style="flex: 2;"
      >
        eat
      </div>
      <div
        style="flex: 2;"
      >
        <span
          data-testid="complete1"
          style="color: green;"
        >
          Yes
        </span>
      </div>
      <div
        style="flex: 1;"
      >
        <span
          data-testid="delete1"
        >
          delete
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`add button click cases click the add button directly 1`] = `
<div
  data-testid="todolist"
>
  <h3>
    List
  </h3>
  <div
    data-testid="update-time"
  >
    Update Time: 
    2021/7/19下午11:14:17
  </div>
  <br />
  <div
    style="display: flex; justify-content: space-between;"
  >
    <input
      data-testid="input"
      placeholder="please input"
      type="text"
    />
    <button
      data-testid="Add"
      disabled=""
    >
      add
    </button>
  </div>
  <br />
  <div
    data-testid="list"
  >
    <div
      class="sc-ksluID JMpHA"
      data-testid="list0"
    >
      <div
        style="flex: 2;"
      >
        drink
      </div>
      <div
        style="flex: 2;"
      >
        <span
          data-testid="complete0"
          style="color: red;"
        >
          No
        </span>
      </div>
      <div
        style="flex: 1;"
      >
        <span
          data-testid="delete0"
        >
          delete
        </span>
      </div>
    </div>
    <div
      class="sc-hBMUJo kWvRdl"
      data-testid="list1"
    >
      <div
        style="flex: 2;"
      >
        eat
      </div>
      <div
        style="flex: 2;"
      >
        <span
          data-testid="complete1"
          style="color: green;"
        >
          Yes
        </span>
      </div>
      <div
        style="flex: 1;"
      >
        <span
          data-testid="delete1"
        >
          delete
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`add button click cases enter the value is not empty, and then click the add button, time changes 1`] = `
<div
  data-testid="todolist"
>
  <h3>
    List
  </h3>
  <div
    data-testid="update-time"
  >
    Update Time: 
    2021/7/19下午11:14:17
  </div>
  <br />
  <div
    style="display: flex; justify-content: space-between;"
  >
    <input
      data-testid="input"
      placeholder="please input"
      type="text"
    />
    <button
      data-testid="Add"
      disabled=""
    >
      add
    </button>
  </div>
  <br />
  <div
    data-testid="list"
  >
    <div
      class="sc-dlMDgC crzXCx"
      data-testid="list0"
    >
      <div
        style="flex: 2;"
      >
        drink
      </div>
      <div
        style="flex: 2;"
      >
        <span
          data-testid="complete0"
          style="color: red;"
        >
          No
        </span>
      </div>
      <div
        style="flex: 1;"
      >
        <span
          data-testid="delete0"
        >
          delete
        </span>
      </div>
    </div>
    <div
      class="sc-kfYoZR nWiQl"
      data-testid="list1"
    >
      <div
        style="flex: 2;"
      >
        eat
      </div>
      <div
        style="flex: 2;"
      >
        <span
          data-testid="complete1"
          style="color: green;"
        >
          Yes
        </span>
      </div>
      <div
        style="flex: 1;"
      >
        <span
          data-testid="delete1"
        >
          delete
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`add button click cases enter the value is not empty, and then click the add button, time changes 2`] = `
<div
  data-testid="todolist"
>
  <h3>
    List
  </h3>
  <div
    data-testid="update-time"
  >
    Update Time: 
    2021/7/19下午11:14:18
  </div>
  <br />
  <div
    style="display: flex; justify-content: space-between;"
  >
    <input
      data-testid="input"
      placeholder="please input"
      type="text"
    />
    <button
      data-testid="Add"
      disabled=""
    >
      add
    </button>
  </div>
  <br />
  <div
    data-testid="list"
  >
    <div
      class="sc-iJCRrE bZYflR"
      data-testid="list0"
    >
      <div
        style="flex: 2;"
      >
        drink
      </div>
      <div
        style="flex: 2;"
      >
        <span
          data-testid="complete0"
          style="color: red;"
        >
          No
        </span>
      </div>
      <div
        style="flex: 1;"
      >
        <span
          data-testid="delete0"
        >
          delete
        </span>
      </div>
    </div>
    <div
      class="sc-giAqHp ejyxuM"
      data-testid="list1"
    >
      <div
        style="flex: 2;"
      >
        eat
      </div>
      <div
        style="flex: 2;"
      >
        <span
          data-testid="complete1"
          style="color: green;"
        >
          Yes
        </span>
      </div>
      <div
        style="flex: 1;"
      >
        <span
          data-testid="delete1"
        >
          delete
        </span>
      </div>
    </div>
    <div
      class="sc-ezzafa ldLYJv"
      data-testid="list2"
    >
      <div
        style="flex: 2;"
      >
        input text
      </div>
      <div
        style="flex: 2;"
      >
        <span
          data-testid="complete2"
          style="color: red;"
        >
          No
        </span>
      </div>
      <div
        style="flex: 1;"
      >
        <span
          data-testid="delete2"
        >
          delete
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`add button click cases enter the value to empty, and then click the add button 1`] = `
<div
  data-testid="todolist"
>
  <h3>
    List
  </h3>
  <div
    data-testid="update-time"
  >
    Update Time: 
    2021/7/19下午11:14:17
  </div>
  <br />
  <div
    style="display: flex; justify-content: space-between;"
  >
    <input
      data-testid="input"
      placeholder="please input"
      type="text"
    />
    <button
      data-testid="Add"
      disabled=""
    >
      add
    </button>
  </div>
  <br />
  <div
    data-testid="list"
  >
    <div
      class="sc-bkbkJK ckstoR"
      data-testid="list0"
    >
      <div
        style="flex: 2;"
      >
        drink
      </div>
      <div
        style="flex: 2;"
      >
        <span
          data-testid="complete0"
          style="color: red;"
        >
          No
        </span>
      </div>
      <div
        style="flex: 1;"
      >
        <span
          data-testid="delete0"
        >
          delete
        </span>
      </div>
    </div>
    <div
      class="sc-iemWCZ cpULLB"
      data-testid="list1"
    >
      <div
        style="flex: 2;"
      >
        eat
      </div>
      <div
        style="flex: 2;"
      >
        <span
          data-testid="complete1"
          style="color: green;"
        >
          Yes
        </span>
      </div>
      <div
        style="flex: 1;"
      >
        <span
          data-testid="delete1"
        >
          delete
        </span>
      </div>
    </div>
  </div>
</div>
`;
